# TensorRT_Plugin_Example

./: .gitignore  CMakeLists.txt  LayerNormPlugin.h  README.md
v2/: Add.cu  AddPluginV2.cpp  AddPluginV2.h  CMakeLists.txt  main.cpp
v3/: Add.cu  AddPluginV3.cpp  CMakeLists.txt  main.cpp
